[package]
name = "rust-raylib"
version = "4.5.0"
description = "Unsafe bindings for Raylib 4.5 and safe wrappers for them."
authors = ["Solar-Falcon"]
edition = "2021"
license = "MIT"
categories = ["api-bindings", "external-ffi-bindings", "multimedia", "graphics"]
exclude = [
    "raylib/examples/*",
    "raylib/logo/*",
    "raylib/projects/*"
]
build = "build/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[build-dependencies]
cmake = "0.1"
fnv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
