[package]
name = "rust-raylib"
version = "0.45.1"
description = "Unsafe bindings for Raylib 4.5 and safe wrappers for them."
authors = ["Solar-Falcon"]
edition = "2021"
license = "Zlib"
categories = ["api-bindings", "external-ffi-bindings", "multimedia", "graphics"]
exclude = [
    "raylib/examples/*",
    "raylib/logo/*",
    "raylib/projects/*"
]
documentation = "https://docs.rs/rust-raylib"
homepage = "https://github.com/Solar-Falcon/rust-raylib"
repository = "https://github.com/Solar-Falcon/rust-raylib"
build = "build/main.rs"

[dependencies]
bitflags = "2.4"
mint = "0.5"
serde = { version = "1", features = ["derive"], optional = true }
static_assertions = "1"

[build-dependencies]
cmake = "0.1"
fnv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
serde = ["dep:serde", "mint/serde"]
